fix(style.css): align caption form header

--- a/style.css
+++ b/style.css
@@ -210,4 +210,8 @@ input:invalid:not(:placeholder-shown) {
     #form {
         max-width: 100%;
     }
+
+    .form__caption {
+        text-align: center;
+    }
 }
